# backend-node/src/generated/swagger.json
@@ -232,6 +232,19 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"UpdateDataConsegnaRequest": {
+				"properties": {
+					"dataConsegna": {
+						"type": "string",
+						"nullable": true
+					}
+				},
+				"required": [
+					"dataConsegna"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"AddMessageRequest": {
 				"properties": {
 					"testo": {
@@ -1229,6 +1242,52 @@
 						}
 					}
 				]
+			}
+		},
+		"/repairs/{repairId}/details/data-consegna": {
+			"patch": {
+				"operationId": "updateDataConsegna",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/RepairDetailsResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"RepairDetails"
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "repairId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UpdateDataConsegnaRequest"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/repairs/{repairId}/details/messages": {
